--- a/index.html
+++ b/index.html
@@ -1,1 +1,120 @@
-Eddie Jaoude
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Eddie Jaoude</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="Eddie Jaoude">
+
+    <!-- styles -->
+    <link href="/twitter.boostrap/less/bootstrap.less" rel="stylesheet/less">
+    <link href="/css/default.css" rel="stylesheet">
+    <link href="/twitter.boostrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- fav and touch icons -->
+    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+
+    <!-- temp less js -->
+    <script src="/js/less-1.3.0.min.js"></script>
+</head>
+
+<body>
+
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="http://eddiejaoude.github.com/">Eddie Jaoude</a>
+            <div class="nav-collapse">
+                <!--
+                <ul class="nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                -->
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+<div class="container">
+
+    <!-- Main hero unit for a primary marketing message or call to action -->
+    <div class="hero-unit">
+        <h1>Open Source the road ahead</h1>
+        <p>Experienced Open Source web application developer - specialising in the LAMP stack with Zend Framework using TDD through to client-side with jQuery to W3C strict standards.</p>
+        <p><a class="btn btn-primary btn-large" href="https://github.com/eddiejaoude">Github projects</a></p>
+    </div>
+
+    <!-- Example row of columns -->
+    <div class="row">
+        <div class="span4">
+            <h2>LinkedIn</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p>
+                <a class="btn" href="http://www.linkedin.com/in/eddiejaoude">
+                    <i class="icon-user"></i>
+                    LinkedIn profile
+                </a>
+            </p>
+        </div>
+        <div class="span4">
+            <h2>Twitter</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p>
+                <a class="btn" href="https://twitter.com/eddiejaoude">
+                    <i class="icon-comment"></i>
+                    Twitter profile
+                </a>
+            </p>
+        </div>
+        <div class="span4">
+            <h2>Github</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>
+                <a class="btn" href="https://github.com/eddiejaoude">
+                    <i class="icon-pencil"></i>
+                    Github profile
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <hr>
+
+    <footer>
+        <p>&copy; Jaoude Studios Ltd 2012</p>
+    </footer>
+
+</div> <!-- /container -->
+
+<!-- Le javascript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="/twitter.boostrap/js/jquery.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-transition.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-alert.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-modal.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-dropdown.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-scrollspy.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-tab.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-tooltip.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-popover.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-button.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-collapse.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-carousel.js"></script>
+<script src="/twitter.boostrap/js/bootstrap-typeahead.js"></script>
+
+</body>
+</html>
