Updated homepage text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
-        <h1>Open Source the road ahead</h1>
+        <h1>Open Source</h1>
+        <h2>The road ahead</h2>
         <p>Experienced Open Source web application developer - specialising in the LAMP stack with Zend Framework using TDD through to client-side with jQuery to W3C strict standards.</p>
         <p><a class="btn btn-primary btn-large" href="https://github.com/eddiejaoude">Github projects</a></p>
     </div>
@@ -61,7 +62,7 @@
     <div class="row">
         <div class="span4">
             <h2>LinkedIn</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p>Work history &amp; recommendation.</p>
             <p>
                 <a class="btn" href="http://www.linkedin.com/in/eddiejaoude">
                     <i class="icon-user"></i>
@@ -71,7 +72,7 @@
         </div>
         <div class="span4">
             <h2>Twitter</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p>Technology activity &amp; project releases.</p>
             <p>
                 <a class="btn" href="https://twitter.com/eddiejaoude">
                     <i class="icon-comment"></i>
@@ -81,7 +82,7 @@
         </div>
         <div class="span4">
             <h2>Github</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Open source projects &amp; contributions.</p>
             <p>
                 <a class="btn" href="https://github.com/eddiejaoude">
                     <i class="icon-pencil"></i>
