Added jquery & dropdown navigation as shortcut links

--- a/index.html
+++ b/index.html
@@ -29,21 +29,20 @@
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="http://eddiejaoude.github.com/">Eddie Jaoude</a>
-            <div class="nav-collapse">
-                <!--
-                <ul class="nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                -->
-            </div><!--/.nav-collapse -->
+
+	<div class="btn-group">
+          <a href="#" class="btn btn-primary"><i class="icon-user icon-white"></i>Eddie Jaoude</a>
+          <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle"><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#"><i class="icon-user"></i>LinkedIn</a></li>
+            <li><a href="#"><i class="icon-comment"></i>Twitter</a></li>
+            <li><a href="#"><i class="icon-pencil"></i>Github</a></li>
+            <li class="divider"></li>
+            <li><a href="#"><i class="i"></i>Home</a></li>
+          </ul>
+        </div>
+
+
         </div>
     </div>
 </div>
@@ -103,7 +102,7 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/twitter.boostrap/js/jquery.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="/twitter.boostrap/js/bootstrap-transition.js"></script>
 <script src="/twitter.boostrap/js/bootstrap-alert.js"></script>
 <script src="/twitter.boostrap/js/bootstrap-modal.js"></script>
