Changed large button from blue to black

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h1>Open Source</h1>
         <h2>The road ahead</h2>
         <p>Experienced Open Source web application developer - specialising in the LAMP stack with Zend Framework using TDD through to client-side with jQuery to W3C strict standards.</p>
-        <p><a class="btn btn-primary btn-large" href="https://github.com/eddiejaoude">Github projects</a></p>
+        <p><a class="btn btn-primary btn-large btn-inverse" href="https://github.com/eddiejaoude">Github projects</a></p>
     </div>
 
     <!-- Example row of columns -->
