--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <title>Eddie Jaoude</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Experienced Open Source web application developer - specialising in the LAMP stack with Zend Framework using TDD through to client-side with jQuery to W3C strict standards.">
     <meta name="author" content="Eddie Jaoude">
 
     <!-- styles -->
     <link href="/twitter.boostrap/less/bootstrap.less" rel="stylesheet/less">
     <link href="/css/default.css" rel="stylesheet">
-    <link href="/twitter.boostrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/twitter.boostrap/less/bootstrap-responsive.less" rel="stylesheet/less">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
