Updated shortcut links (url)

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <div class="container">
 
 	<div class="btn-group">
-          <a href="#" class="btn btn-primary"><i class="icon-user icon-white"></i>Eddie Jaoude</a>
+          <a href="http://eddiejaoude.github.com/" class="btn btn-primary"><i class="icon-user icon-white"></i>Eddie Jaoude</a>
           <a href="#" data-toggle="dropdown" class="btn btn-primary dropdown-toggle"><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#"><i class="icon-user"></i>LinkedIn</a></li>
-            <li><a href="#"><i class="icon-comment"></i>Twitter</a></li>
-            <li><a href="#"><i class="icon-pencil"></i>Github</a></li>
+            <li><a href="http://www.linkedin.com/in/eddiejaoude"><i class="icon-user"></i>LinkedIn</a></li>
+            <li><a href="https://twitter.com/eddiejaoude"><i class="icon-comment"></i>Twitter</a></li>
+            <li><a href="https://github.com/eddiejaoude"><i class="icon-pencil"></i>Github</a></li>
             <li class="divider"></li>
-            <li><a href="#"><i class="i"></i>Home</a></li>
+            <li><a href="http://eddiejaoude.github.com/"><i class="i"></i>Home</a></li>
           </ul>
         </div>
 
