--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery-1.8.3.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/default.js"></script>
 
