Added youtube link to main header

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                             <li class="divider"></li>
                             <li class="nav-header">Most popular...</li>
                             <li><a href="https://github.com/eddiejaoude">ZF1 &amp; Doctrine2</a></li>
-                            <li><a href="https://github.com/eddiejaoude/zf-log-reader">ZF1 Log Reader</a></li>
                             <li><a href="https://github.com/eddiejaoude/zf2">ZF2</a></li>
                         </ul>
                     </a>
                 </li>
+                <li><a href="http://www.youtube.com/user/eddiejaoude"><i class="icon-film"></i> YouTube</a></li>
                 <!--<li><a href="/about.html"><i class="icon-globe"></i> About</a></li>-->
             </ul>
             </div>
