Added meetup link to main navigation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </a>
                 </li>
                 <li><a href="http://www.youtube.com/user/eddiejaoude"><i class="icon-film"></i> YouTube</a></li>
-                <!--<li><a href="/about.html"><i class="icon-globe"></i> About</a></li>-->
+                <li><a href="http://www.meetup.com/guildford-lamp-devs/"><i class="icon-eye-open"></i> Meetup</a></li>
             </ul>
             </div>
 
