Added OpenSource Report Card link
http://osrc.dfm.io/eddiejaoude/

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 </li>
                 <li><a href="http://www.youtube.com/user/eddiejaoude"><i class="icon-film"></i> YouTube</a></li>
                 <li><a href="http://www.meetup.com/guildford-lamp-devs/"><i class="icon-eye-open"></i> Meetup</a></li>
+                <li><a href="http://osrc.dfm.io/eddiejaoude/"><i class="icon-info-sign"></i> Open Source</a></li>
             </ul>
             </div>
 
