Updated EddieJaoude overview

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <!-- Main hero unit for a primary marketing message or call to action -->
     <div class="hero-unit">
         <h1>Open Source <small>Is the road ahead</small></h1>
-        <p>Experienced Open Source web application developer - specialising in the LAMP stack with Zend Framework
-            using TDD through to client-side with jQuery & Twitter Bootstrap to W3C strict standards. With many of his
-            own projects &amp; contribution to others (inc. ZF1, ZF2, CakePHP Soap Source etc),
-            Eddie has learnt many best practices. With 5+ years experience specialising in SOA architecture &amp;
-            Design Patterns while achieving 100% code coverage with mocking unit tests to test boundary conditions.</p>
+        <p>
+        Developing is an art and I love to draw using code and design patterns. 
+        The more I practice, the more I learn. 
+        The continual improvement makes me realise how little I know and how much more I want to learn.
+        </p>
         <p><a class="btn btn-primary btn-large btn-inverse popover-show" href="https://github.com/eddiejaoude"
               data-title="Click to view GitHub profile." data-content="Note, this will leave this site.">
             <i class="icon-pencil icon-white"></i> Github projects</a></p>
