Dashboard Hub added to header links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <li class="divider"></li>
                             <li class="nav-header">Most popular...</li>
                             <li><a href="https://github.com/eddiejaoude">ZF1 &amp; Doctrine2</a></li>
-                            <li><a href="https://github.com/eddiejaoude/zf2">ZF2</a></li>
+                            <li><a href="https://github.com/DashboardHub">Dashboard Hub</a></li>
                         </ul>
                     </a>
                 </li>
