Updated personal intro in hero box

--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
     <div class="hero-unit">
         <h1>Open Source <small>Is the road ahead</small></h1>
         <p>
-        Developing is an art and I love to draw using code and design patterns. 
-        The more I practice, the more I learn. 
-        The continual improvement makes me realise how little I know and how much more I want to learn.
+        Eddie has been programming for over a decade and has consulted for organisations in the financial, 
+        governmental and private sectors. Outside of his consultancy role Eddie enjoys attending and 
+        contributing to hackathons and conferences around the world which deal with a variety of technical 
+        and social issues. His first foray into the realm of Women's issues was EmpowerHack's "Empowering 
+        women and girl refugees" hackathon. Since then Eddie has contributed to EmpowerHack's Open Source 
+        projects from a technical perspective and has also brought his expertise and infectious enthusiasm 
+        to actively support the growth of women in tech at WHFNP and AcornAspirations. He has been likened 
+        to Sheldon Cooper from "The Big Bang Theory" with marginally more social skills.
         </p>
         <p><a class="btn btn-primary btn-large btn-inverse popover-show" href="https://github.com/eddiejaoude"
               data-title="Click to view GitHub profile." data-content="Note, this will leave this site.">
