--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <hr>
 
     <footer>
-        <p>&copy; Jaoude Studios Ltd 2012
-            <span class="muted"> - Eddie Abou-Jaoude, Bsc, Msc - Guildford, UK</span></p>
+        <p>&copy; Jaoude Studios Ltd 
+            <span class="muted"> - Eddie Abou-Jaoude, Bsc, Msc - Surrey and London, UK</span></p>
     </footer>
 
 </div> <!-- /container -->
