GitHub organisations added

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                         <ul class="dropdown-menu">
                             <li><a href="https://github.com/eddiejaoude">View more...</a></li>
                             <li class="divider"></li>
-                            <li class="nav-header">Most popular...</li>
-                            <li><a href="https://github.com/eddiejaoude">ZF1 &amp; Doctrine2</a></li>
-                            <li><a href="https://github.com/DashboardHub">Dashboard Hub</a></li>
+                            <li class="nav-header">Organisations</li>
+                            <li><a href="https://github.com/DashboardHub">DashboardHub</a></li>
+                            <li><a href="https://github.com/empowerhack">EmpowerHack</a></li>
                         </ul>
                     </a>
                 </li>
