Links to open in new tab

--- a/index.html
+++ b/index.html
@@ -146,24 +146,24 @@
             <div class="col l3 s12">
                 <h5 class="white-text">Communities</h5>
                 <ul>
-                    <li><a class="white-text" href="http://empowerhack.io">EmpowerHack</a></li>
-                    <li><a class="white-text" href="http://womenhackfornonprofits.com">Women Hack For non Profit</a></li>
-                    <li><a class="white-text" href="http://acornaspirations.co.uk">Acorn Aspirations</a></li>
-                    <li><a class="white-text" href="http://www.codefirstgirls.org.uk">Code First Girls</a></li>
-                    <li><a class="white-text" href="http://werocktech.com">We Rock Tech</a></li>
-                    <li><a class="white-text" href="http://www.mumsintechnology.co.uk">Mums in Tech</a></li>
-                    <li><a class="white-text" href="http://codebar.io">Codebar</a></li>
-                    <li><a class="white-text" href="http://hackbrexit.org">HackBrexit</a></li>
+                    <li><a class="white-text" href="http://empowerhack.io" target="_blank">EmpowerHack</a></li>
+                    <li><a class="white-text" href="http://womenhackfornonprofits.com" target="_blank">Women Hack For non Profit</a></li>
+                    <li><a class="white-text" href="http://acornaspirations.co.uk" target="_blank">Acorn Aspirations</a></li>
+                    <li><a class="white-text" href="http://www.codefirstgirls.org.uk target="_blank"">Code First Girls</a></li>
+                    <li><a class="white-text" href="http://werocktech.com" target="_blank">We Rock Tech</a></li>
+                    <li><a class="white-text" href="http://www.mumsintechnology.co.uk" target="_blank">Mums in Tech</a></li>
+                    <li><a class="white-text" href="http://codebar.io" target="_blank">Codebar</a></li>
+                    <li><a class="white-text" href="http://hackbrexit.org" target="_blank">HackBrexit</a></li>
                 </ul>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Connect</h5>
                 <ul>
-                    <li><a class="white-text" href="http://github.com/eddiejaoude"><i class="fa fa-github-square" aria-hidden="true"></i> GitHub</a></li>
-                    <li><a class="white-text" href="http://twitter.com/eddiejaoude"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
-                    <li><a class="white-text" href="https://www.linkedin.com/in/eddiejaoude"><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a></li>
-                    <li><a class="white-text" href="https://www.instagram.com/eddiejaoude/"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
-                    <li><a class="white-text" href="https://www.facebook.com/eddie.jaoude"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+                    <li><a class="white-text" href="http://github.com/eddiejaoude" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i> GitHub</a></li>
+                    <li><a class="white-text" href="http://twitter.com/eddiejaoude" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+                    <li><a class="white-text" href="https://www.linkedin.com/in/eddiejaoude" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i> LinkedIn</a></li>
+                    <li><a class="white-text" href="https://www.instagram.com/eddiejaoude/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
+                    <li><a class="white-text" href="https://www.facebook.com/eddie.jaoude" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
                 </ul>
             </div>
         </div>
