--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">Bio</h5>
-                <p class="grey-text text-lighten-4">Open Source Advocate.</p>
+                <p class="grey-text text-lighten-4">OpenSource advocate. FullStack polyglot Contractor. Passionate for #Diversity, #Inclusion & #BestPractices.</p>
 
 
             </div>
