2016 Events involved in were added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 <div class="container">
     <div class="section">
 
-        <!--   Icon Section   -->
         <div class="row">
             <div class="col s12 m4">
                 <div class="icon-block">
@@ -127,11 +126,74 @@
         </div>
 
     </div>
-    <br><br>
 
-    <div class="section">
+</div>
+
+<div class="section light-blue white-text">
+  <div class="container">
+    <div class="row">
+        <div class="col s12 m12">
+            <h2>Past Events 2016</h2>
+            <p>Events I have been involved in. Too many to list all the ones I attend.</p>
+        </div>
+    </div>
+    <div class="row">
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="https://info.thoughtworks.com/Ada-The-Empowered-Technologist-London.html" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
+                    Ada: The Empowered Technologist
+                  </a>
+                </h5>
+                <h6>On the panel | Monday 17 October, 2016</h6>
+                <p class="light">We are on a mission to create a more inclusive industry and, beyond that a more socially just world. Come and join us for an evening of talks, workshops and discussions, designed to inspire, educate and empower technologists whilst celebrating the efforts that are being made to make a difference within our industry.</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="https://info.thoughtworks.com/Hack-Brexit.html" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
+                    Beyond Brexit: Creating dialogue and action for a country divided
+                  </a>
+                </h5>
+                <h6>Organiser & on the panel | Saturday & Sunday July 23-24, 2016</h6>
+                <p class="light">Brexit is one of the most controversial and seismic political events in the UK’s recent history. Yet throughout the pre-referendum campaigns and aftermath of Brexit many questions remain unanswered and the future unclear.</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="http://www.meetup.com/Women-Hack-For-Non-Profits/events/228749255/" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
+                    WHFNP presents #PanelForParity in Celebration of International Women's Day
+                  </a>
+                </h5>
+                <h6>On the panel | Monday March 7th, 2016</h6>
+                <p class="light">In celebration of International Women's Day 2016, Women Hack for Non-Profits is live streaming a panel on Monday, March 7th from 7PM-8PM GMT to discuss and celebrate being a Woman in Technology in line with the IWD theme "Pledge for Parity". </p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="http://www.meetup.com/Women-Hack-For-Non-Profits/events/227690312/" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
+                    Open Source first. How to look at a project objectively & create your own
+                  </a>
+                </h5>
+                <h6>Speaker | March 23 6:30 PM, 2016</h6>
+                <p class="light">This month, we are organising a workshop focussed on open source projects. Tools that you need to know about while working on a open source project or starting a new one. </p>
+            </div>
+        </div>
 
     </div>
+
+  </div>
 </div>
 
 <footer class="page-footer orange">
