GitHub presentations added for AcornAspirations / AcornHack events

--- a/index.html
+++ b/index.html
@@ -191,6 +191,28 @@
             </div>
         </div>
 
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                    <i class="material-icons">event</i>
+                    AcornHack: Introduction to GitHub
+                </h5>
+                <h6>Speaker | March, 2016</h6>
+                <p class="light">Showing Open Source on GitHub, going through commits, branches, pull requests.</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                    <i class="material-icons">event</i>
+                    AcornHack: Introduction to GitHub
+                </h5>
+                <h6>Workshop | July, 2016</h6>
+                <p class="light">Showing Open Source on GitHub, going through commmits, branches, pull requests.</p>
+            </div>
+        </div>
+
     </div>
 
   </div>
