Updated events - speaker for AcornHack on GitHub

--- a/index.html
+++ b/index.html
@@ -144,10 +144,23 @@
                 <h5>
                   <a href="https://info.thoughtworks.com/Ada-The-Empowered-Technologist-London.html" target="_blank" class="white-text">
                     <i class="material-icons">event</i>
+                    AcornHack: Introduction to GitHub workflow
+                  </a>
+                </h5>
+                <h6>Speaker | November, 2016</h6>
+                <p class="light">Acorn Aspirations in partnership with Global Entrepreneurship Week is running a 2-day hackathon/start-up style event where 100 young people aged 12-19 will collaborate with mentors from the TechCity community to develop tech start-ups that solve social problems in their local communities and worldwide.</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="https://info.thoughtworks.com/Ada-The-Empowered-Technologist-London.html" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
                     Ada: The Empowered Technologist
                   </a>
                 </h5>
-                <h6>On the panel | Monday 17 October, 2016</h6>
+                <h6>On the panel | October, 2016</h6>
                 <p class="light">We are on a mission to create a more inclusive industry and, beyond that a more socially just world. Come and join us for an evening of talks, workshops and discussions, designed to inspire, educate and empower technologists whilst celebrating the efforts that are being made to make a difference within our industry.</p>
             </div>
         </div>
@@ -173,7 +186,7 @@
                     WHFNP presents #PanelForParity in Celebration of International Women's Day
                   </a>
                 </h5>
-                <h6>On the panel | Monday March 7th, 2016</h6>
+                <h6>On the panel | March, 2016</h6>
                 <p class="light">In celebration of International Women's Day 2016, Women Hack for Non-Profits is live streaming a panel on Monday, March 7th from 7PM-8PM GMT to discuss and celebrate being a Woman in Technology in line with the IWD theme "Pledge for Parity". </p>
             </div>
         </div>
@@ -186,7 +199,7 @@
                     Open Source first. How to look at a project objectively & create your own
                   </a>
                 </h5>
-                <h6>Speaker | March 23 6:30 PM, 2016</h6>
+                <h6>Speaker | March, 2016</h6>
                 <p class="light">This month, we are organising a workshop focussed on open source projects. Tools that you need to know about while working on a open source project or starting a new one. </p>
             </div>
         </div>
