PHP EU presentation added

--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
                 <h5>
                   <a href="http://www.meetup.com/Women-Hack-For-Non-Profits/events/228749255/" target="_blank" class="white-text">
                     <i class="material-icons">event</i>
+                    PHP EU: CI & CD best practices
+                  </a>
+                </h5>
+                <h6>Speaker | May, 2016</h6>
+                <p class="light">Automated everything! Then run these on CI & CD. This makes this repeatable & auditable in every environment.</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="http://www.meetup.com/Women-Hack-For-Non-Profits/events/228749255/" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
                     WHFNP presents #PanelForParity in Celebration of International Women's Day
                   </a>
                 </h5>
