--- a/index.html
+++ b/index.html
@@ -181,6 +181,17 @@
         <div class="col s12 m12">
             <div class="icon-block">
                 <h5>
+                    <i class="material-icons">event</i>
+                    AcornHack: Introduction to GitHub
+                </h5>
+                <h6>Workshop | July, 2016</h6>
+                <p class="light">Showing Open Source on GitHub, going through commmits, branches, pull requests.</p>
+            </div>
+        </div>
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
                   <a href="http://www.meetup.com/Women-Hack-For-Non-Profits/events/228749255/" target="_blank" class="white-text">
                     <i class="material-icons">event</i>
                     PHP EU: CI & CD best practices
@@ -231,11 +242,13 @@
         <div class="col s12 m12">
             <div class="icon-block">
                 <h5>
-                    <i class="material-icons">event</i>
-                    AcornHack: Introduction to GitHub
+                    <a href="http://www.meetup.com/Women-Hack-For-Non-Profits/events/228749255/" target="_blank" class="white-text">
+                        <i class="material-icons">event</i>
+                        PHP EU: CI & CD workshop
+                    </a>
                 </h5>
-                <h6>Workshop | July, 2016</h6>
-                <p class="light">Showing Open Source on GitHub, going through commmits, branches, pull requests.</p>
+                <h6>Speaker | May, 2016</h6>
+                <p class="light">Creating a GitHub repo, connecting with with Travis CI, on successful build Tag & create Release, deploy release to Heroku.</p>
             </div>
         </div>
 
