--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="row">
         <div class="col s12 m12">
             <h2>Past Events 2016</h2>
-            <p>Events I have been involved in. Too many to list all the ones I attend.</p>
+            <p>Recent events I have been involved in. Too many to list all or the ones I attend, follow me on <a href="http://twitter.com/eddiejaoude">Twitter: @EddieJaoude</a> for upcoming events.</p>
         </div>
     </div>
     <div class="row">
