--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     </div>
 </div>
 
-
 <div class="container">
     <div class="section">
 
@@ -133,11 +132,24 @@
   <div class="container">
     <div class="row">
         <div class="col s12 m12">
-            <h2>Past Events 2016</h2>
-            <p>Recent events I have been involved in. Too many to list all or the ones I attend, follow me on <a href="http://twitter.com/eddiejaoude">Twitter: @EddieJaoude</a> for upcoming events.</p>
+            <h2>Last 12 Months of Events</h2>
+            <p>Recent events I have been involved in. Too many to list all or the ones I attend, follow me on <a class="white-text" href="http://twitter.com/eddiejaoude">Twitter: @EddieJaoude</a> for upcoming events.</p>
         </div>
     </div>
     <div class="row">
+
+        <div class="col s12 m12">
+            <div class="icon-block">
+                <h5>
+                  <a href="https://info.thoughtworks.com/Ada-The-Empowered-Technologist-London.html" target="_blank" class="white-text">
+                    <i class="material-icons">event</i>
+                    Accessibility Hackathon
+                  </a>
+                </h5>
+                <h6>Winning Team | March, 2017</h6>
+                <p class="light">This Accessible Tech Hackathon was aimed at making the workplace more accessible for those with disabilities. It’s a prime example of using technology to make the world a better place. It’s tech for good. It was held on 18-19 March and was a two-day hackathon at Google Campus. Hackathon groups partnered with specific social enterprises to solve accessibility issues they’re facing.</p>
+            </div>
+        </div>
 
         <div class="col s12 m12">
             <div class="icon-block">
