--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
 
 <div class="container">
     <div class="section">
+        <p>Eddie is a software engineer specialising in full stack web development in open source technologies, who has been consulting in the public and private sector for the last eight years.  Eddie has advised organisations such as the Ministry of Justice, De La Rue and Crossrail.  In addition Eddie is heavily involved in “Tech for Good” communities by hosting, participating and mentoring open source projects ranging from providing assistance to refugees, championing accessibility and  encouraging diversity in the tech industry.  Eddie also has over 140 open source projects which touch on a variety of areas.</p>
+        <p>Recently Eddie has been in the top 500 open source contributors world wide and the top 11 trending developers on GitHub, along with Microsoft, Mozilla and Twitter.</p>
+    </div>
+</div>
+
+<div class="container">
+    <div class="section">
 
         <div class="row">
             <div class="col s12 m4">
