--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <div class="container">
     <div class="row">
         <div class="col s12 m12">
-            <h2>Last 12 Months of Events</h2>
+            <h2>Selected events over the last 12 months</h2>
             <p>Recent events I have been involved in. Too many to list all or the ones I attend, follow me on <a class="white-text" href="http://twitter.com/eddiejaoude">Twitter: @EddieJaoude</a> for upcoming events.</p>
         </div>
     </div>
