HatchLondon added to events

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="center light-blue-text"><i class="material-icons">code</i></h2>
                     <h5 class="center">DashboardHub</h5>
 
-                    <p class="light">R&D projects for Jaoude Studios Ltd. Ranging from Proof-of-Concepts to MVPs using realtime dashboards with iBeacons & IoT.</p>
+                    <p class="light">R&amp;D projects for Jaoude Studios Ltd. Ranging from Proof-of-Concepts to MVPs using realtime dashboards with iBeacons & IoT.</p>
                     <div class="row center">
                         <a href="http://github.com/DashboardHub" id="download-button" class="btn-large waves-effect waves-light orange" target="_blank">
                             <i class="fa fa-github-square" aria-hidden="true"></i> Collaborate on DashboardHub</a>
@@ -144,6 +144,20 @@
         </div>
     </div>
     <div class="row">
+
+      <div class="col s12 m12">
+          <div class="icon-block">
+              <h5>
+                <a href="https://www.hatchlondon.io" target="_blank" class="white-text">
+                  <i class="material-icons">event</i>
+                  Hatch London
+                </a>
+              </h5>
+              <h6>Mentor and Workshop | November, 2017</h6>
+              <p class="light">Over 2 days, 100 of the brightest students from all degree backgrounds will be teaming up in London, UK to innovative and solve real-world problems.</p>
+              <p class="light">Introduction to managing your Open Source project on GitHub, from Issue tracking to version control and web hosting. Using these new skills and with a little html and css, build your first website with GitHub pages which will give you continuous deployment for your website to allow the world to see it after severy update.</p>
+          </div>
+      </div>
 
         <div class="col s12 m12">
             <div class="icon-block">
