--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Eddie Jaoude:: Senior Open Source Developer</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,12 +27,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Clarence Taylor</span>
+        <span class="d-block d-lg-none">Eddie Jaoude</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="Eddie Jaoude:: Senior Open Source Developer">
         </span>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -56,32 +56,39 @@
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
         </ul>
-      </div>
+      </div> -->
     </nav>
 
     <div class="container-fluid p-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Eddie
+            <span class="text-primary">Jaoude</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
-          </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <div class="subheading mb-5">London, UK · Porto, Portugal · Thailand</div>
+          <p class="lead mb-5">
+            Passionate for #opensource #code #github #remote #startup & #inclusion. In recent years I have trended on GitHub with the likes of Twitter, Facebook, Angular etc and was in the top 500 open source contributors in the world. As a senior software engineer, the more I learn, the more I realise how much I still need to learn.
+          </p>
+
+          <p class="lead mb-5">Founder of <a href="https://twitter.com/dashboardhub" target="_blank">@dashboardhub</a>.</p>
+
+          <p class="lead mb-5">Subscribe to my channel if you want to get into coding or take your coding to the next level or you are already coding and want to join the open source community and hackathon events. I will share the events I go to and teach you best practices in software engineering and coding industry.</p>
+
+          <p class="lead mb-5">If you have an Open Source project and you want a review or contributions, let me know :)</p>
+          </p>
           <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="#">
+            <a href="https://www.youtube.com/eddiejaoude" target="_blank">
+                <i class="fab fa-youtube"></i>
+              </a>
+            <a href="https://github.com/eddiejaoude" target="_blank">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/eddiejaoude" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
+            <a href="https://linkedin.com/in/eddiejaoude" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
         </div>
@@ -89,7 +96,7 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
+      <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
@@ -281,7 +288,7 @@
               Place - James Buchanan High School - Hackathon 2005</li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
     </div>
 
