#21 chibi cartoon character added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
   </head>
 
